[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/main_menu/MainMenu.gd" id="1_main"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.25, 0.45, 1)

[node name="WaveOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.35, 0.55, 0.3)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Isles of the
Blue Current"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.85, 1.0, 0.8)
text = "An Okinawa-Inspired Fishing Adventure"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 30)

[node name="StartButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(250, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Set Sail"

[node name="QuitButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(250, 50)
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 22
text = "Quit"

[node name="Version" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -30.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1, 1, 1, 0.4)
text = "Phase 1 â€” v0.1"
horizontal_alignment = 2
